docs: Correct grammar, capitalization, and wording across multiple documentation files.

--- a/docs/admin/05.get_started/10.providers/05.registrar/ovh/autodns.mdx
+++ b/docs/admin/05.get_started/10.providers/05.registrar/ovh/autodns.mdx
@@ -11,7 +11,7 @@ This page is meant to guide you in obtaining an API key from OVH in order to con
 
 1. Go to [the OVH token request page](https://eu.api.ovh.com/createToken/)
 
-2. Fill the form with the required informations as shown below:
+2. Fill the form with the required information as shown below:
 
     - Account ID or email address: This is your usual OVH login
     - Password: This is your usual OVH password
