--- a/docs/admin/05.get_started/40.post_install/15.port_forwarding.mdx
+++ b/docs/admin/05.get_started/40.post_install/15.port_forwarding.mdx
@@ -39,5 +39,5 @@ If you use both a modem and a router, then you need to do the following:
 2. then on the router (the box between the modem and your devices) create rules to forward the above ports to the static IP address for your server.
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> Many internet service providers (ISP) block outgoing traffic on port 25 by default, to fight spam. Port 25 is however necessary if you want your server to be able to send email. In other extreme cases, some ISP may not even allow to use port 80/443 (web) freely... Depending on the ISP, it might be possible to open them in the admin interface... Check [this page](/admin/get_started/providers/isp/) for more info.
+<FAIcon icon="fa-exclamation-triangle"/> Many internet service providers (ISPs) block outgoing traffic on port 25 by default, to fight spam. Port 25 is however necessary if you want your server to be able to send email. In other extreme cases, some ISPs may not even allow you to use port 80/443 (web) freely... Depending on the ISP, it might be possible to open them in the admin interface... Check [this page](/admin/get_started/providers/isp/) for more info.
 :::
