--- a/docs/admin/25.domains/certificate.mdx
+++ b/docs/admin/25.domains/certificate.mdx
@@ -16,7 +16,7 @@ In practice, visitors will see a screen list this:
 
 Which basically asks the visitor : **"Do you trust the server hosting this website?"**. This can rightfully frighten a lot of people.
 
-To avoid this confusion, it's possible to get a certificate signed a known authority named **Let's Encrypt** which provide free certificates directly recognized by browsers. YunoHost allows to directly install this certificate from the web administration interface or from the command line.
+To avoid this confusion, it's possible to get a certificate signed by a known authority named **Let's Encrypt** which provides free certificates directly recognized by browsers. YunoHost allows you to directly install this certificate from the web administration interface or from the command line.
 
 ## Install a Let's Encrypt certificate
 
