--- a/docs/admin/index.mdx
+++ b/docs/admin/index.mdx
@@ -31,7 +31,7 @@ If you are an **impatient power user**, you may want to try YunoHost, or jump ri
 <Button url="https://apps.yunohost.org/">📦 Browse the app catalog</Button>
 </div>
 
-Are you **new to self-hosting and servers in general**? We recommend to take it slow and go through the pages presenting [self-hosting](/admin/about_self_hosting), the [different modes](/admin/get_started/methods) and [other](/admin/get_started/why_should_you_not_host_yourself) [things](/category/providers) you should know prior to jumping into the action! 
+Are you **new to self-hosting and servers in general**? We recommend taking it slow and go through the pages presenting [self-hosting](/admin/about_self_hosting), the [different modes](/admin/get_started/methods) and [other](/admin/get_started/why_should_you_not_host_yourself) [things](/category/providers) you should know prior to jumping into the action!
 
 Are you **already using YunoHost**? You may want to get in touch with the community or reach for help:
 
@@ -41,7 +41,7 @@ Are you **already using YunoHost**? You may want to get in touch with the commun
 <Button url="/community/help">🛟 Help</Button>
 </div>
 
-Finally, you can **support the project** or get involve in [different ways](/dev):
+Finally, you can **support the project** or get involved in [different ways](/dev):
 
 <div class="text--center">
 <Button url="https://yunohost.org/donate.html">💰 Donate</Button>
