--- a/docs/community/90.terms_of_services.mdx
+++ b/docs/community/90.terms_of_services.mdx
@@ -28,7 +28,7 @@ By using these services, you agree to be bound by the following terms.
 
 This document details the TOS that apply **to the services provided by the YunoHost project**, but **not** to YunoHost as software **nor** to the applications offered in the YunoHost catalog.
 
-YunoHost as software is released [under the AGPLv3 license](https://www.gnu.org/licenses/agpl-3.0.txt) and is therefore provided without warranty of any kind and is not liable for any damages resulting from its use, nor from the use of the applications it allows to install.
+YunoHost as software is released [under the AGPLv3 license](https://www.gnu.org/licenses/agpl-3.0.txt) and is therefore provided without warranty of any kind and is not liable for any damages resulting from its use, nor from the use of the applications it allows you to install.
 
 *If you use YunoHost to provide services to others, it is your responsibility to define and publish your own terms and conditions of use for your own services, and to inform yourself of any legal implications of the applications you install.*
 
