--- a/docs/dev/20.translation.mdx
+++ b/docs/dev/20.translation.mdx
@@ -80,4 +80,4 @@ Currently, translation work for apps can only be done through Git/GitHub. App-sp
     - other notes like `POST_UPGRADE.md`, `_fr.md` for specific infos to be displayed after an upgrade. Similar files may exist to display messages before/after install/upgrades. Check [the corresponding page in the packaging doc](/dev/packaging/doc) for more details.
 - some apps may include a **`config_panel.toml`** (configuration panel), for example [here for Nextcloud](https://github.com/YunoHost-Apps/nextcloud_ynh/blob/master/config_panel.toml) also containing inline translation such as `name.en`, `.fr` or `ask.en`, `ask.fr` titles or input descriptions.
 
-These informations appear both in the public app store, and inside YunoHost webadmin or CLI.
+This information appears both in the public app store, and inside YunoHost webadmin or CLI.
