--- a/docs/dev/50.packaging/20.scripts/20.helpers_v2.0.mdx
+++ b/docs/dev/50.packaging/20.scripts/20.helpers_v2.0.mdx
@@ -332,7 +332,7 @@ example: ynh_mongo_exec --command=&#34;db.getMongo().getDBNames().indexOf(\&#34;
 </details>
 
 <details>
-<summary>`ynh_mongo_setup_db`<br/><i>Create a database, an user and its password. Then store the password in the app&#39;s config</i></summary>
+<summary>`ynh_mongo_setup_db`<br/><i>Create a database, a user and its password. Then store the password in the app&#39;s config</i></summary>
 
 **Usage**: `ynh_mongo_setup_db --db_user=user --db_name=name [--db_pwd=pwd]`
 
