--- a/docs/dev/50.packaging/index.mdx
+++ b/docs/dev/50.packaging/index.mdx
@@ -40,7 +40,7 @@ Over time, recurrent steps (such as installing dependencies with apt, or setting
 
 Various tools were implemented to test the app and standardize their behavior.
 
-After a while, a set of common practices and conventions emerged and is somewhat reflected and maintain in the [`example_ynh`](https://github.com/YunoHost/example_ynh) template application. While it is tempting for dev-oriented folks to change variable naming schemes or refactorize the structure of scripts, it turns out that it is even more important to stick to the common set of practices (even though arbitrary and not elegant) to ease the maintenance of all apps by any member of the packaging community accross all repos!
+After a while, a set of common practices and conventions emerged and is somewhat reflected and maintained in the [`example_ynh`](https://github.com/YunoHost/example_ynh) template application. While it is tempting for dev-oriented folks to change variable naming schemes or refactorize the structure of scripts, it turns out that it is even more important to stick to the common set of practices (even though arbitrary and not elegant) to ease the maintenance of all apps by any member of the packaging community across all repos!
 
 Nevertheless, even though helpers existed, the inherent structure of apps was hard and boring to maintain with too many redundant pieces of code or filled with funky historical conventions. **A new v2 format** [has been designed and added to YunoHost 11.1 in early 2023](https://github.com/YunoHost/yunohost/pull/1289) in the hope to modernize and simplify app packaging and improve the UI/UX of YunoHost.
 
