--- a/docs/dev/index.mdx
+++ b/docs/dev/index.mdx
@@ -12,7 +12,7 @@ Talk about software freedom, [self-hosting](/admin/about_self_hosting) and YunoH
 
 ## 💰 Donate
 
-YunoHost is a volunteer-driven, non-profit community project. Donations help us stay afloat and dedicate more time to the project. Checkout [our donation page](https://yunohost.org/donate.html)!
+YunoHost is a volunteer-driven, non-profit community project. Donations help us stay afloat and dedicate more time to the project. Check out [our donation page](https://yunohost.org/donate.html)!
 
 ## 🛟 Help others
 
@@ -28,15 +28,15 @@ Help make YunoHost accessible to more people by translating its interface into y
 
 ## 💡 Help us with design
 
-As a tech project, it's easy for us to get caught up in the technical details and forget about making everything intuitive and accessible for non-tech-savvy users. If you have skills in communication, visual identity, design, UX, or just general feedback on the website, documentation, installation process, or everyday use of YunoHost, we’d love to hear from you! Gget in touch with us on [the forum](https://forum.yunohost.org/), [the chat rooms](/community/chat_rooms) or [the issue tracker](https://github.com/YunoHost/issues/issues)!
+As a tech project, it's easy for us to get caught up in the technical details and forget about making everything intuitive and accessible for non-tech-savvy users. If you have skills in communication, visual identity, design, UX, or just general feedback on the website, documentation, installation process, or everyday use of YunoHost, we’d love to hear from you! Get in touch with us on [the forum](https://forum.yunohost.org/), [the chat rooms](/community/chat_rooms) or [the issue tracker](https://github.com/YunoHost/issues/issues)!
 
 ## ⚗️  Participate in testings
 
-We regularly need testers for new versions of YunoHost or app updates. Checkout [the project announcements on the forum](https://forum.yunohost.org/c/announcement/8), or if there is a [pending testing for your favourite apps on the packaging dashboard](https://apps.yunohost.org/dash?filter=testings).
+We regularly need testers for new versions of YunoHost or app updates. Check out [the project announcements on the forum](https://forum.yunohost.org/c/announcement/8), or if there is a [pending testing for your favourite apps on the packaging dashboard](https://apps.yunohost.org/dash?filter=testings).
 
 ## 🏷️ Refine the app catalog
 
-The app catalog is an important aspect of YunoHost. We always need help to improve the app catalog experience, for example ensuring that apps are in the appropriate category, with an appropriate logo and screenshot, that their description is relevant and accurate, that they do provide relevant information in the context of YunoHost, etc. Checkout for example [this issue](https://github.com/YunoHost/issues/issues/2676) with guidelines on how to contribute on this. We're also open to feedback regarding how the whole design of the catalog could be improved!
+The app catalog is an important aspect of YunoHost. We always need help to improve the app catalog experience, for example ensuring that apps are in the appropriate category, with an appropriate logo and screenshot, that their description is relevant and accurate, that they do provide relevant information in the context of YunoHost, etc. Check out for example [this issue](https://github.com/YunoHost/issues/issues/2676) with guidelines on how to contribute on this. We're also open to feedback regarding how the whole design of the catalog could be improved!
 
 ## 📦 Package applications
 
@@ -44,4 +44,4 @@ You can extend YunoHost capabilities by packaging new applications. Have a look 
 
 ## ⚙️ Develop
 
-YunoHost is built mainly using Python, Bash, and VueJS. Checkout the [developer documentation](/dev/core/), and join us on the [development chat room](/community/chat_rooms)! You can also [look for good first issues on our issue tracker](https://github.com/YunoHost/issues/issues?q=sort%3Aupdated-desc+label%3A%22Good+first+issue%22+state%3Aopen)!
+YunoHost is built mainly using Python, Bash, and VueJS. Check out the [developer documentation](/dev/core/), and join us on the [development chat room](/community/chat_rooms)! You can also [look for good first issues on our issue tracker](https://github.com/YunoHost/issues/issues?q=sort%3Aupdated-desc+label%3A%22Good+first+issue%22+state%3Aopen)!
