--- a/docs/admin/15.command_line.mdx
+++ b/docs/admin/15.command_line.mdx
@@ -7,7 +7,7 @@ import TabItem from '@theme/TabItem';
 
 ## What's SSH?
 
-**SSH** stands for Secure Shell, and refers to a protocol that allows to remotely control and administer a machine using the command line interface (CLI). It is available by default in any terminal on GNU/Linux and macOS. On Windows, you may want to use [MobaXterm](https://mobaxterm.mobatek.net/download-home-edition.html) (after launching it, click on Session then SSH).
+**SSH** stands for Secure Shell, and refers to a protocol that allows you to remotely control and administer a machine using the command line interface (CLI). It is available by default in any terminal on GNU/Linux and macOS. On Windows, you may want to use [MobaXterm](https://mobaxterm.mobatek.net/download-home-edition.html) (after launching it, click on Session then SSH).
 
 The command line interface (CLI) is, in the computer world, the original (and more technical) way of interacting with a computer compared to graphical interface. Command line interfaces are generally said to be more complete, powerful or efficient than a graphical interface, though also more difficult to learn.
 
@@ -16,12 +16,12 @@ The command line interface (CLI) is, in the computer world, the original (and mo
 ### Credentials *before* running the postinstall
 
 - If you are **installing at home**, the default credentials are login: `root` and password: `yunohost` (or `1234` if you flashed an armbian image)
-- If you are **installing a remote server (VPS)**, your provider should have communicated you the login and password (or allowed you to configure an SSH key)
+- If you are **installing a remote server (VPS)**, your provider should have communicated the login and password to you (or allowed you to configure an SSH key)
 
 ### Credentials *after* running the postinstall
 
 
-During the postinstall, you've been asked to choose an user and an administration password. This user account allows you to connect to the server through SSH. The password becomes also the new password for the `root` user. Additionally, **the `root` SSH login becomes disabled after the postinstall and you should log in using the user account created during postinstall !**. The only exception is that you may still be able to login using `root` *from the local network - or from a direct console on the server* (this is to cover the event where the LDAP server is broken and the users members of the `admins` group are unusables).
+During the postinstall, you've been asked to choose a user and an administration password. This user account allows you to connect to the server through SSH. The password also becomes the new password for the `root` user. Additionally, **the `root` SSH login becomes disabled after the postinstall and you should log in using the user account created during postinstall !**. The only exception is that you may still be able to login using `root` *from the local network - or from a direct console on the server* (this is to cover the event where the LDAP server is broken and the users who are members of the `admins` group are unusable).
 
 :::tip
 If you connected with the administration account and would like to become `root` for convenience (e.g. to avoid typing `sudo` in front of every command), you can become `root` using the command `sudo su` or `sudo -i`.
@@ -35,7 +35,7 @@ If you are **installing at home** (e.g. on a Raspberry Pi or OLinuXino or old co
 - if `yunohost.local` and the like do not work, your need to [find out the local IP of the server](/admin/get_started/post_install/find_ip).
 - if you installed a server at home but are attempting to connect from outside your local network, make sure port 22 is correctly forwarded to your server.
 
-If your server is a remote server (VPS), your provider should have communicated you the IP address of the machine
+If your server is a remote server (VPS), your provider should have provided you with the IP address of the machine
 
 In any cases, if you already configured a domain name pointing to the appropriate IP, it's much better to use `your.domain.tld` instead of the IP address.
 
@@ -124,7 +124,7 @@ Providing a full tutorial about the command line is quite beyond the scope of th
 
 ### The `yunohost` command
 
-The `yunohost` command can be used to administer your server and perform the various actions similarly to what you do on the webadmin. The command must be launched either from the `root` user or from a user member of the `admins` group by preceeding them with `sudo`. (ProTip™ : you can become `root` with the command `sudo su` as an user member of `admins` group).
+The `yunohost` command can be used to administer your server and perform the various actions similarly to what you do on the webadmin. The command must be launched either from the `root` user or from a user who is a member of the `admins` group by preceding the command with `sudo`. (ProTip™: you can become `root` with the command `sudo su` as a user who is a member of the `admins` group).
 
 YunoHost commands usually have this kind of structure :
 
