--- a/docs/admin/40.backups/10.backup_methods.mdx
+++ b/docs/admin/40.backups/10.backup_methods.mdx
@@ -18,7 +18,7 @@ There are [remote borg repository providers](https://www.borgbackup.org/support/
 
 - backup of data to remote storage (support for different types of storage: SFTP, S3, Backblaze B2, Azure, etc. *SFTP is recommended* for simplicity)
 - deduplication and compression of files, which makes it possible to keep many previous copies without too much storage overhead
-- data encryption, which allows to store data at a third party
+- data encryption, which allows you to store data at a third party
 - to define the frequency and type of data to be backed up
 - a mail alert system in case of backup failure.
 
@@ -30,7 +30,7 @@ This application is currently broken!
 
 - based on rsync and GPG
 - backup of data on a remote storage (support for different types of storage)
-- data encryption, which allows to store data at a third party
+- data encryption, which allows you to store data at a third party
 
 The package also allows you to finely define the frequency and type of data to be backed up and integrates an email alert system in case of backup failure.
 
