--- a/docs/dev/50.packaging/80.misc/packaging_apps_virtualbox.mdx
+++ b/docs/dev/50.packaging/80.misc/packaging_apps_virtualbox.mdx
@@ -9,7 +9,7 @@ This documentation page aims at explaining how to setup a YunoHost virtual serve
 There are mostly two reasons why one should prefer a virtual server rather than their own server:
 
 - You can freely torture a virtual server without any risk of breaking it, since you can always restore it to a former working state. It would really be a pity to break your own real server!
-- In a typical workflow, a virtual server state would be restored from a known snapshot before starting any work on it, so as to always keep a clean system, without any residues of a former installation. This allows to always be as close a possible to a user first installation.
+- In a typical workflow, a virtual server state would be restored from a known snapshot before starting any work on it, so as to always keep a clean system, without any residues of a former installation. This allows you to always be as close as possible to a user's first installation.
 
 We will discuss VirtualBox in this guide, as it comes with an easy to use GUI. If you prefer a pure commandline approach to handling your virtual machine, you should use [ynh-dev](/dev/core/) instead.
 
