--- a/docs/dev/80.core/index.mdx
+++ b/docs/dev/80.core/index.mdx
@@ -7,7 +7,7 @@ Well, thanks!
 
 If you're looking for stuff to implement or fix, please see [the project's issue tracker](https://github.com/YunoHost/issues/issues).
 
-We recommend to **not** develop on your own machine where you might store important
+We recommend **not** developing on your own machine where you might store important
 data. Instead, most of the testing can be done in [Incus containers](./devenv#incus).
 
 Here are the suggested steps to work on the core:
