Consistency with WordPress name

--- a/docs/admin/30.apps/index.mdx
+++ b/docs/admin/30.apps/index.mdx
@@ -48,7 +48,7 @@ In the context of YunoHost, it is quite common to have a single (or a few) domai
 
 ```text
 yolo.com
-     ├── /blog  : Wordpress (a blog)
+     ├── /blog  : WordPress (a blog)
      ├── /cloud : Nextcloud (a cloud service)
      ├── /rss   : TinyTiny RSS (a RSS reader)
      ├── /wiki  : DokuWiki (a wiki)
@@ -61,7 +61,7 @@ This might look prettier for end users, but is generally considered more complic
 If all apps from the previous example were installed on a separate domain, this would give something like this:
 
 ```text
-blog.yolo.com  : Wordpress (a blog)
+blog.yolo.com  : WordPress (a blog)
 cloud.yolo.com : Nextcloud (a cloud service)
 rss.yolo.com   : TinyTiny RSS (a RSS reader)
 wiki.yolo.com  : DokuWiki (a wiki)
