--- a/docs/admin/45.tutorials/65.sftp_on_apps.mdx
+++ b/docs/admin/45.tutorials/65.sftp_on_apps.mdx
@@ -14,7 +14,7 @@ However, those user are chrooted in their home directory for security reasons.
 If you want to give access to a specific apps through SFTP, here are additional steps to do after giving the SFTP permission in the web interface.
 
 In instructions below, 
-- USER is the user to whom you wish to give permission to edit wordpress files.
+- USER is the user to whom you wish to give permission to edit WordPress files.
 - `/var/www/wordpress/wp-config.php` must be replaced by the path your app config file. For example, for yeswiki (`/var/www/yeswiki/wakka.config.php`)
 
 ```bash
