--- a/docs/dev/50.packaging/20.scripts/20.helpers_v2.0.mdx
+++ b/docs/dev/50.packaging/20.scripts/20.helpers_v2.0.mdx
@@ -1203,7 +1203,7 @@ creates the parent destination directory
 
 If `dest_path` is ended by a slash it complete this path with the basename of `src_path`.
 
-Example in the context of a wordpress app :
+Example in the context of a WordPress app :
 ```
 ynh_backup "/etc/nginx/conf.d/$domain.d/$app.conf"
 # => This line will be added into CSV file
