--- a/docs/admin/45.tutorials/55.moving_app_folder.mdx
+++ b/docs/admin/45.tutorials/55.moving_app_folder.mdx
@@ -6,10 +6,10 @@ Applications folder are (*usually*) located in `/var/www/$appname`
 
 If an application folder is expected to get bigger because of the amount of data it contains, it might be relevant to move it to another storage (like an external hard drive).
 
-Here's a summary of how to do this the application wordpress. Here, is is assumed that
+Here's a summary of how to do this the application WordPress. Here, is is assumed that
 [you already mounted the external hard-drive](/admin/tutorials/external_storage).
 
-#### 1. Move the entire wordpress folder to an external hard drive
+#### 1. Move the entire WordPress folder to an external hard drive
 
 ```bash
 mv /var/www/wordpress /media/externalharddrive/
